<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvContactName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_name1" />

        <TextView
            android:id="@+id/tvPhoneNumber1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number1" />

        <Button
            android:id="@+id/btnCall1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call1" />

        <Button
            android:id="@+id/btnSendText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvContactName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_name2" />

        <TextView
            android:id="@+id/tvPhoneNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number2" />

        <Button
            android:id="@+id/btnCall2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call2" />

        <Button
            android:id="@+id/btnSendText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/tvContactName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_name3" />

        <TextView
            android:id="@+id/tvPhoneNumber3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number3" />

        <Button
            android:id="@+id/btnCall3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_call3" />

        <Button
            android:id="@+id/btnSendText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>